--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
   </head>
-  <body class="bg-cover bg-center bg-no-repeat h-screen w-screen overflow-hidden" style="background-image: url('/gimnasio-bg.jpg');">
+  <body class="bg-cover bg-center bg-no-repeat h-screen w-screen overflow-hidden" 
+      style="background-image: url('/gimnasio-bg.jpg'); background-attachment: fixed; margin: 0; padding: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" ></div>
   </body>
